--- a/configs/ipq60xx-nowifi.config
+++ b/configs/ipq60xx-nowifi.config
@@ -223,3 +223,7 @@ CONFIG_PACKAGE_libopenssl-legacy=y
 CONFIG_PACKAGE_ucode-mod-nl80211=y
 CONFIG_PACKAGE_ucode-mod-rtnl=y
 CONFIG_PACKAGE_ucode-mod-uloop=y
+CONFIG_DEFAULT_nftables=y
+CONFIG_PACKAGE_kmod-nfnetlink-queue=y
+CONFIG_PACKAGE_kmod-nft-queue=y
+CONFIG_PACKAGE_nftables-json=y
